# financial-ml-core

./: .gitignore  404.html  DEV_GUIDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
docs/: index.md
docs/reference/config/: providers.md
docs/reference/data/: loader.md
docs/reference/metrics/: indicators.md  performance.md  statistics.md
docs/reference/model_selection/: split.md
docs/reference/pipelines/: data_factory.md
docs/reference/processing/: cleaning.md  features.md  labeling.md
finml_core/config/: constants.py  providers.py
finml_core/data/: loader.py
finml_core/metrics/: indicators.py  performance.py  statistics.py
finml_core/model_selection/: split.py
finml_core/pipelines/: data_factory.py
finml_core/processing/: cleaning.py  features.py  labeling.py
finml_core/utils/: validation.py
misc/: templates.txt
notebooks/: Full Module Cycle Example.ipynb  Quantitative Finance.ipynb
reference/config/providers/: index.html
reference/data/loader/: index.html
reference/metrics/indicators/: index.html
reference/metrics/performance/: index.html
reference/metrics/statistics/: index.html
reference/model_selection/split/: index.html
reference/pipelines/data_factory/: index.html
reference/processing/cleaning/: index.html
reference/processing/features/: index.html
reference/processing/labeling/: index.html
scripts/: gen_docs.py  project_hierarchy.py
search/: search_index.json
tests/metrics/: test_indicators.py  test_performance.py  test_statistics.py
tests/processing/: test_features.py  test_labeling.py
