[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finml-core"
version = "0.1.3"
authors = [
  { name="Francisco Puertos Rumayor", email="paco_puertos11@hotmail.com" },
]
description = "A first-principles framework for Financial Machine Learning."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "yfinance>=0.2.61",
    "scikit-learn>=1.8.0",
    "pandas-market-calendars>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/PPuertos/financial-ml-core"
Repository = "https://github.com/PPuertos/financial-ml-core"
Issues = "https://github.com/PPuertos/financial-ml-core/issues"

[tool.setuptools.packages.find]
include = ["finml_core*"]
exclude = ["misc*", "notebooks*", "tests*"]
